# peatix-cli

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
peatix_cli/: __init__.py  main.py  parser.py
peatix_cli/command/: root.py  search.py
peatix_cli/parser/: root.py
