[metadata]
name = peatix_cli
version = 0.0.1
description = search and featch peatix events
long_description = file: README.md
license = MIT License

[options]
packages = peatix_cli
install_requires =
    rich >= 10.9.0
    selenium >= 3.141.0

[options.entry_points]
console_scripts =
    peatix_cli = peatix_cli:run